--- a/angular/angular.json
+++ b/angular/angular.json
@@ -49,7 +49,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/default.png"
             ],
             "styles": [
               "src/styles.scss"
@@ -117,7 +118,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/hammerjs/hammer.min.js"
+            ]
           }
         }
       }
