--- a/angular/package.json
+++ b/angular/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "hammerjs": "^2.0.8",
     "jsonwebtoken": "^9.0.0",
+    "ngx-image-cropper": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
