--- a/nest/package.json
+++ b/nest/package.json
@@ -29,6 +29,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "argon2": "^0.30.3",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.1.4",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.1",
